--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,45 +8,8 @@
     android:orientation="vertical"
     tools:context="clertonleal.com.androidarchitecture.ui.MainActivity">
 
-    <EditText
-        android:id="@+id/first_name"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list_user"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/first_name"
-        android:layout_marginBottom="10dp"/>
-
-    <EditText
-        android:id="@+id/last_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/last_name"
-        android:layout_marginBottom="10dp"/>
-
-    <EditText
-        android:id="@+id/rg"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/rg"
-        android:layout_marginBottom="10dp"/>
-
-    <EditText
-        android:id="@+id/cpf"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/cpf"
-        android:layout_marginBottom="10dp"/>
-
-    <EditText
-        android:id="@+id/email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/email"
-        android:layout_marginBottom="10dp"
-        android:inputType="textEmailAddress" />
-
-    <Button
-        android:id="@+id/create_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/create_user"/>
+        android:layout_height="match_parent"/>
 </LinearLayout>
