--- a/app/src/main/res/layout/activity_create_user.xml
+++ b/app/src/main/res/layout/activity_create_user.xml
@@ -13,6 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/first_name"
+        android:singleLine="true"
+        android:imeOptions="actionNext"
         android:layout_marginBottom="10dp"/>
 
     <EditText
@@ -20,6 +22,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/last_name"
+        android:singleLine="true"
+        android:imeOptions="actionNext"
         android:layout_marginBottom="10dp"/>
 
     <EditText
@@ -27,6 +31,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/rg"
+        android:singleLine="true"
+        android:imeOptions="actionNext"
         android:layout_marginBottom="10dp"/>
 
     <EditText
@@ -34,6 +40,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/cpf"
+        android:singleLine="true"
+        android:imeOptions="actionNext"
         android:layout_marginBottom="10dp"/>
 
     <EditText
@@ -41,6 +49,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/email"
+        android:singleLine="true"
+        android:imeOptions="actionDone"
         android:layout_marginBottom="10dp"
         android:inputType="textEmailAddress" />
 
