--- a/app/src/main/res/layout/activity_create_user.xml
+++ b/app/src/main/res/layout/activity_create_user.xml
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/first_name"
-        android:singleLine="true"
+        android:maxLines="1"
+        android:inputType="textCapWords"
         android:imeOptions="actionNext"
         android:layout_marginBottom="10dp"/>
 
@@ -22,7 +23,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/last_name"
-        android:singleLine="true"
+        android:maxLines="1"
+        android:inputType="textCapWords"
         android:imeOptions="actionNext"
         android:layout_marginBottom="10dp"/>
 
@@ -31,7 +33,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/rg"
-        android:singleLine="true"
+        android:maxLines="1"
+        android:inputType="number"
         android:imeOptions="actionNext"
         android:layout_marginBottom="10dp"/>
 
@@ -40,7 +43,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/cpf"
-        android:singleLine="true"
+        android:maxLines="1"
+        android:inputType="number"
         android:imeOptions="actionNext"
         android:layout_marginBottom="10dp"/>
 
@@ -49,7 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/email"
-        android:singleLine="true"
+        android:maxLines="1"
         android:imeOptions="actionDone"
         android:layout_marginBottom="10dp"
         android:inputType="textEmailAddress" />
