--- a/app/src/main/res/layout/create_user.xml
+++ b/app/src/main/res/layout/create_user.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
             name="viewModel"
@@ -24,7 +23,6 @@
             android:imeOptions="actionNext"
             android:maxLines="1"
             android:inputType="textCapWords"
-            app:fillError="@{viewModel.firstNameError}"
             android:text="@={viewModel.user.firstName}"
             android:layout_marginBottom="10dp"/>
 
@@ -36,7 +34,6 @@
             android:maxLines="1"
             android:inputType="textCapWords"
             android:imeOptions="actionNext"
-            app:fillError="@{viewModel.lastNameError}"
             android:text="@={viewModel.user.lastName}"
             android:layout_marginBottom="10dp"/>
 
@@ -49,7 +46,6 @@
             android:inputType="number"
             android:imeOptions="actionNext"
             android:layout_marginBottom="10dp"
-            app:fillError="@{viewModel.rgError}"
             android:text="@={viewModel.user.rg}"/>
 
         <EditText
@@ -60,7 +56,6 @@
             android:maxLines="1"
             android:inputType="number"
             android:imeOptions="actionNext"
-            app:fillError="@{viewModel.cpfError}"
             android:text="@={viewModel.user.cpf}"
             android:layout_marginBottom="10dp"/>
 
@@ -73,7 +68,6 @@
             android:inputType="textEmailAddress"
             android:imeOptions="actionDone"
             android:layout_marginBottom="10dp"
-            app:fillError="@{viewModel.emailError}"
             android:text="@={viewModel.user.email}" />
 
         <Button
